[package]
name = "timelog"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/zhangyuang/timelog"
documentation = "https://docs.rs/timelog"
description = "A simple timer for logging time durations like console.time in JavaScript."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

