[package]
name = "timelog"
version = "1.0.5"
edition = "2021"
repository = "https://github.com/zhangyuang/timelog"
documentation = "https://docs.rs/timelog"
description = "A simple timer for logging time durations like console.time in JavaScript."
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["console", "Performance", "Window"]  }
